--- a/frontend/src/style/Home.css
+++ b/frontend/src/style/Home.css
@@ -53,6 +53,35 @@
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
 }
+.main-image1{
+  margin-top: 40px;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+}
+
+.over1{
+  position: relative;
+  z-index: 1;
+  height: 100%;
+  text-align: center;
+  padding: 60px 20px;
+  background: rgba(232, 224, 140, 0.5); /* dark overlay for text readability */
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.over1-heading {
+  text-align: center;
+  color: #8b0000;
+  font-size: 28px;
+  margin-bottom:0px;
+  margin-top: 0px;
+}
 
 /* ====== Media Queries ====== */
 
